--- a/apps/web/src/routes/Addons/Addon/styles.less
+++ b/apps/web/src/routes/Addons/Addon/styles.less
@@ -10,7 +10,7 @@
     padding: 1.5rem;
     border: 1px solid transparent;
     border-radius: var(--border-radius);
-    background-color: var(--overlay-color);
+    background-color: var(--color-surface);
     transition: background-color 0.15s var(--ease-smooth), box-shadow 0.15s var(--ease-smooth), border-color 0.15s var(--ease-smooth);
     cursor: pointer;
 
